# Greedguler

./: .gitignore  .readthedocs.yaml  Cargo.toml  HEFT.py  README.md  algorithm.py  algorithm.py.lprof  applicated_criteria.py  criteria.py  data_loader.py  data_viz.py  greedguler.py  greedguler_batch.py  output_pool_id_job_id.txt  requirements.txt  schedule.json  schedule_heu.json  schedule_mod.json  schedule_viz.html  server_log.json  start_logger.py  test_graph.graphml  tests.py  verification  verification.py
docs/: algorithm.rst  azure_batch.rst  conf.py  data.rst  index.rst
intermediates/: outpath_GreedgulerTask0_2024324143.json  outpath_GreedgulerTask0_2024324152.json  outpath_GreedgulerTask10_2024325103.json  outpath_GreedgulerTask10_20243251036.json  outpath_GreedgulerTask11_2024325112.json  outpath_GreedgulerTask12_20243251118.json  outpath_GreedgulerTask12_2024327951.json  outpath_GreedgulerTask14_2024327114.json  outpath_GreedgulerTask15_20243271141.json  outpath_GreedgulerTask16_20243271157.json  outpath_GreedgulerTask17_20243271249.json  outpath_GreedgulerTask18_20243271258.json  outpath_GreedgulerTask19_20243271326.json  outpath_GreedgulerTask1_20243241529.json  outpath_GreedgulerTask20_20243271414.json  outpath_GreedgulerTask21_20243271435.json  outpath_GreedgulerTask22_20243271530.json  outpath_GreedgulerTask23_20243271614.json  outpath_GreedgulerTask25_20243271728.json  outpath_GreedgulerTask26_20243271751.json  outpath_GreedgulerTask27_2024327182.json  outpath_GreedgulerTask2_20243241542.json  outpath_GreedgulerTask30_2024327183.json  schedule_1.json  (+13 more)
(+19 files in other folders)
