[package]
name = "rapid_scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rapid_scheduler"
crate-type = ["cdylib"]

[dependencies]
dict_derive = "0.5.0"
pyo3 = "0.20.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
simd-json = "0.13.8"
